--- a/conception.html
+++ b/conception.html
@@ -1,109 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Conception</title>
-    <style>
-        header {
-            background-color: #1111;
-            padding: 20px;
-            text-align: center;
-            font-size: 24px;
-            font-weight: bold;
-        }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Conception</title>
+  <style>
+    header {
+      background-color: #1111;
+      padding: 20px;
+      text-align: center;
+      font-size: 24px;
+      font-weight: bold;
+    }
 
-        nav {
-            background: #222;
-            padding: 10px;
-            text-align: center;
-        }
+    nav {
+      background: #222;
+      padding: 10px;
+      text-align: center;
+    }
 
-        nav a {
-            color: #FFD700;
-            text-decoration: none;
-            margin: 0 15px;
-            font-size: 18px;
-        }
+    nav a {
+      color: #ffd700;
+      margin: 0 15px;
+      text-decoration: none;
+      font-size: 18px;
+    }
 
-        section {
-            padding: 20px;
-        }
+    section {
+      padding: 20px;
+    }
 
-        .rule {
-            background: #1A1A1A;
-            padding: 15px;
-            margin: 10px 0;
-            border-left: 5px solid #00f2ff;
-        }
+    .rule {
+      background: #1a1a1a;
+      padding: 15px;
+      margin: 10px 0;
+      border-left: 5px solid #00f2ff;
+    }
 
-        footer {
-            background-color: #111;
-            text-align: center;
-            padding: 10px;
-            margin-top: 20px;
-        }
-        .language-toggle {
-            position: fixed;
-            top: 10px;
-            right: 10px;
-            background: rgba(10, 20, 40, 0.9);
-            color: cyan;
-            border: 2px solid cyan;
-            padding: 10px 20px;
-            font-size: 16px;
-            font-weight: bold;
-            cursor: pointer;
-            transition: transform 0.2s, background 0.3s;
-            box-shadow: 0px 4px 15px rgba(0, 255, 255, 0.8);
-            font-family: 'BatmanForever', sans-serif;
-        }
+    footer {
+      background-color: #111;
+      text-align: center;
+      padding: 10px;
+      margin-top: 20px;
+    }
 
-        .language-toggle:hover {
-            background: rgba(0, 255, 255, 0.3);
-            transform: scale(1.1);
-        }
-        h3 {
-            color: rgb(28, 163, 186);
-        }
-    </style>
+    .language-toggle {
+      position: fixed;
+      top: 10px;
+      right: 10px;
+      background: rgba(10, 20, 40, 0.9);
+      color: cyan;
+      border: 2px solid cyan;
+      padding: 10px 20px;
+      font-size: 16px;
+      font-weight: bold;
+      cursor: pointer;
+      transition: transform 0.2s, background 0.3s;
+      box-shadow: 0 4px 15px rgba(0, 255, 255, 0.8);
+      font-family: "BatmanForever", sans-serif;
+    }
+
+    .language-toggle:hover {
+      background: rgba(0, 255, 255, 0.3);
+      transform: scale(1.1);
+    }
+
+    h3 {
+      color: rgb(28, 163, 186);
+    }
+  </style>
 </head>
 
 <body>
-    <!-- Header Section -->
-    <header>
-        <h1 data-en="Conception" data-fr="Conception">Conception</h1>
-    </header>
-</nav>
-        <section id="rules">
-        <div class="rule">
-            <h3 data-en="Game Piece Conveyor System" data-fr="Game Piece Conveyor System">Game Piece Conveyor System</h3>
-            <p data-en="Game piece conveyor system is made up of 3 distinct levels for each size of GP. Proportions and alignment are exactly molded to match the entrance of the Engines for extreme ease and efficiency when playing the game. Each conveyor system funnels game pieces from the playing field, as they stand, into the desired channel to match the Engine, allowing for undemanding and simple manipulation of the GP's and the Engines together when ejected from the back side of the robot. Both the chain system (sprocket, chain, dividers) and their bearing brackets are fully custom designed."
-               data-fr="Game piece conveyor system is made up of 3 distinct levels for each size of GP. Proportions and alignment are exactly molded to match the entrance of the Engines for extreme ease and efficiency when playing the game. Each conveyor system funnels game pieces from the playing field, as they stand, into the desired channel to match the Engine, allowing for undemanding and simple manipulation of the GP's and the Engines together when ejected from the back side of the robot. Both the chain system (sprocket, chain, dividers) and their bearing brackets are fully custom designed.">
-                Game piece conveyor system is made up of 3 distinct levels for each size of GP. Proportions and alignment are exactly molded to match the entrance of the Engines for extreme ease and efficiency when playing the game. Each conveyor system funnels game pieces from the playing field, as they stand, into the desired channel to match the Engine, allowing for undemanding and simple manipulation of the GP's and the Engines together when ejected from the back side of the robot. Both the chain system (sprocket, chain, dividers) and their bearing brackets are fully custom designed.
-            </p>
-        </div>
-        <div class="rule">
-            <h3 data-en="Electronics" data-fr="Electronics">Electronics</h3>
-            <p data-en="All electronics are securely mounted onto the top frame of the robot, distributed for easy access and efficiency, also providing clear accessibility to the kill switch and Crcduino. The battery is placed on the front end of the robot frame to counter weight the components - such as the 3 motor setup for the distinct conveyors - it also balances the robot's side where the wheelbase is slightly shortened for maneuverability over the engines."
-               data-fr="All electronics are securely mounted onto the top frame of the robot, distributed for easy access and efficiency, also providing clear accessibility to the kill switch and Crcduino. The battery is placed on the front end of the robot frame to counter weight the components - such as the 3 motor setup for the distinct conveyors - it also balances the robot's side where the wheelbase is slightly shortened for maneuverability over the engines.">
-                All electronics are securely mounted onto the top frame of the robot, distributed for easy access and efficiency, also providing clear accessibility to the kill switch and Crcduino. The battery is placed on the front end of the robot frame to counter weight the components - such as the 3 motor setup for the distinct conveyors - it also balances the robot's side where the wheelbase is slightly shortened for maneuverability over the engines.
-            </p>
-        </div>
-        <div class="rule">
-            <h3 data-en="Claw Lift / Game Piece Stacking Lift" data-fr="Claw Lift / Game Piece Stacking Lift">Claw Lift / Game Piece Stacking Lift</h3>
-            <p data-en="Claw lift and rotating mechanism are placed at the front end of the robot at a precise position to pick up the 'core' GP through our conveyor system for maximum potential when stacking (since the 'core' is the tallest vertically placeable GP - the mechanism also acting as counterweight. The mechanism is made up of 2 large pulleys/chains, positioned for maximum moment of inertia for increased torque; This allows the claw to be rotated at a high precision while being able to carry the heaviest of game pieces."
-               data-fr="Claw lift and rotating mechanism are placed at the front end of the robot at a precise position to pick up the 'core' GP through our conveyor system for maximum potential when stacking (since the 'core' is the tallest vertically placeable GP - the mechanism also acting as counterweight. The mechanism is made up of 2 large pulleys/chains, positioned for maximum moment of inertia for increased torque; This allows the claw to be rotated at a high precision while being able to carry the heaviest of game pieces.">
-                Claw lift and rotating mechanism are placed at the front end of the robot at a precise position to pick up the 'core' GP through our conveyor system for maximum potential when stacking (since the 'core' is the tallest vertically placeable GP - the mechanism also acting as counterweight. The mechanism is made up of 2 large pulleys/chains, positioned for maximum moment of inertia for increased torque; This allows the claw to be rotated at a high precision while being able to carry the heaviest of game pieces.
-            </p>
-        </div>
-        <div class="rule">
-            <h3 data-en="Drive System" data-fr="Drive System">Drive System</h3>
-            <p data-en="The drive system is RWD made up of 8 distinct wheels. The front 4 wheels (2 each side sandwich) are mounted on 2 bearings and heavily braced Vex metal, a sprocket is connected in between both thin but resistant wheels for a seamless chain driven drive. The back 4 dead wheels (2 each side sandwich) are independent from each other despite being on the same shaft due to specially placed bearings, making it incredibly smooth to turn even with 2 powered wheels out of 4. The system is powered by two, 117rpm GoBilda motors for a balance of speed and torque. As a whole the drive has a very small footprint to give the robot an elite advantage when playing on the Engines."
-               data-fr="The drive system is RWD made up of 8 distinct wheels. The front 4 wheels (2 each side sandwich) are mounted on 2 bearings and heavily braced Vex metal, a sprocket is connected in between both thin but resistant wheels for a seamless chain driven drive. The back 4 dead wheels (2 each side sandwich) are independent from each other despite being on the same shaft due to specially placed bearings, making it incredibly smooth to turn even with 2 powered wheels out of 4. The system is powered by two, 117rpm GoBilda motors for a balance of speed and torque. As a whole the drive has a very small footprint to give the robot an elite advantage when playing on the Engines.">
-                The drive system is RWD made up of 8 distinct wheels. The front 4 wheels (2 each side sandwich) are mounted on 2 bearings and heavily braced Vex metal, a sprocket is connected in between both thin but resistant wheels for a seamless chain driven drive. The back 4 dead wheels (2 each side sandwich) are independent from each other despite being on the same shaft due to specially placed bearings, making it incredibly smooth to turn even with 2 powered wheels out of 4. The system is powered by two, 117rpm GoBilda motors for a balance of speed and torque. As a whole the drive has a very small footprint to give the robot an elite advantage when playing on the Engines.
-            </p>
-        </div>
-    </section>
+  <header>
+    <h1 data-en="Conception" data-fr="Conception">Conception</h1>
+  </header>
+
+  <section id="rules">
+    <div class="rule">
+      <h3 data-en="Game Piece Conveyor System" data-fr="Game Piece Conveyor System">
+        Game Piece Conveyor System
+      </h3>
+      <p
+        data-en="Game piece conveyor system is made up of 3 distinct levels for each size of GP. Proportions and alignment are exactly molded to match the entrance of the Engines for extreme ease and efficiency when playing the game. Each conveyor system funnels game pieces from the playing field, as they stand, into the desired channel to match the Engine, allowing for undemanding and simple manipulation of the GP's and the Engines together when ejected from the back side of the robot. Both the chain system (sprocket, chain, dividers) and their bearing brackets are fully custom designed."
+        data-fr="Game piece conveyor system is made up of 3 distinct levels for each size of GP. Proportions and alignment are exactly molded to match the entrance of the Engines for extreme ease and efficiency when playing the game. Each conveyor system funnels game pieces from the playing field, as they stand, into the desired channel to match the Engine, allowing for undemanding and simple manipulation of the GP's and the Engines together when ejected from the back side of the robot. Both the chain system (sprocket, chain, dividers) and their bearing brackets are fully custom designed.">
+        Game piece conveyor system is made up of 3 distinct levels for each size of GP. Proportions and alignment are exactly molded to match the entrance of the Engines for extreme ease and efficiency when playing the game. Each conveyor system funnels game pieces from the playing field, as they stand, into the desired channel to match the Engine, allowing for undemanding and simple manipulation of the GP's and the Engines together when ejected from the back side of the robot. Both the chain system (sprocket, chain, dividers) and their bearing brackets are fully custom designed.
+      </p>
+    </div>
+
+    <div class="rule">
+      <h3 data-en="Electronics" data-fr="Electronics">Electronics</h3>
+      <p
+        data-en="All electronics are securely mounted onto the top frame of the robot, distributed for easy access and efficiency, also providing clear accessibility to the kill switch and Crcduino. The battery is placed on the front end of the robot frame to counter weight the components - such as the 3 motor setup for the distinct conveyors - it also balances the robot's side where the wheelbase is slightly shortened for maneuverability over the engines."
+        data-fr="All electronics are securely mounted onto the top frame of the robot, distributed for easy access and efficiency, also providing clear accessibility to the kill switch and Crcduino. The battery is placed on the front end of the robot frame to counter weight the components - such as the 3 motor setup for the distinct conveyors - it also balances the robot's side where the wheelbase is slightly shortened for maneuverability over the engines.">
+        All electronics are securely mounted onto the top frame of the robot, distributed for easy access and efficiency, also providing clear accessibility to the kill switch and Crcduino. The battery is placed on the front end of the robot frame to counter weight the components - such as the 3 motor setup for the distinct conveyors - it also balances the robot's side where the wheelbase is slightly shortened for maneuverability over the engines.
+      </p>
+    </div>
+
+    <div class="rule">
+      <h3 data-en="Claw Lift / Game Piece Stacking Lift" data-fr="Claw Lift / Game Piece Stacking Lift">
+        Claw Lift / Game Piece Stacking Lift
+      </h3>
+      <p
+        data-en="Claw lift and rotating mechanism are placed at the front end of the robot at a precise position to pick up the 'core' GP through our conveyor system for maximum potential when stacking (since the 'core' is the tallest vertically placeable GP - the mechanism also acting as counterweight. The mechanism is made up of 2 large pulleys/chains, positioned for maximum moment of inertia for increased torque; This allows the claw to be rotated at a high precision while being able to carry the heaviest of game pieces."
+        data-fr="Claw lift and rotating mechanism are placed at the front end of the robot at a precise position to pick up the 'core' GP through our conveyor system for maximum potential when stacking (since the 'core' is the tallest vertically placeable GP - the mechanism also acting as counterweight. The mechanism is made up of 2 large pulleys/chains, positioned for maximum moment of inertia for increased torque; This allows the claw to be rotated at a high precision while being able to carry the heaviest of game pieces.">
+        Claw lift and rotating mechanism are placed at the front end of the robot at a precise position to pick up the 'core' GP through our conveyor system for maximum potential when stacking (since the 'core' is the tallest vertically placeable GP - the mechanism also acting as counterweight. The mechanism is made up of 2 large pulleys/chains, positioned for maximum moment of inertia for increased torque; This allows the claw to be rotated at a high precision while being able to carry the heaviest of game pieces.
+      </p>
+    </div>
+
+    <div class="rule">
+      <h3 data-en="Drive System" data-fr="Drive System">Drive System</h3>
+      <p
+        data-en="The drive system is RWD made up of 8 distinct wheels. The front 4 wheels (2 each side sandwich) are mounted on 2 bearings and heavily braced Vex metal, a sprocket is connected in between both thin but resistant wheels for a seamless chain driven drive. The back 4 dead wheels (2 each side sandwich) are independent from each other despite being on the same shaft due to specially placed bearings, making it incredibly smooth to turn even with 2 powered wheels out of 4. The system is powered by two, 117rpm GoBilda motors for a balance of speed and torque. As a whole the drive has a very small footprint to give the robot an elite advantage when playing on the Engines."
+        data-fr="The drive system is RWD made up of 8 distinct wheels. The front 4 wheels (2 each side sandwich) are mounted on 2 bearings and heavily braced Vex metal, a sprocket is connected in between both thin but resistant wheels for a seamless chain driven drive. The back 4 dead wheels (2 each side sandwich) are independent from each other despite being on the same shaft due to specially placed bearings, making it incredibly smooth to turn even with 2 powered wheels out of 4. The system is powered by two, 117rpm GoBilda motors for a balance of speed and torque. As a whole the drive has a very small footprint to give the robot an elite advantage when playing on the Engines.">
+        The drive system is RWD made up of 8 distinct wheels. The front 4 wheels (2 each side sandwich) are mounted on 2 bearings and heavily braced Vex metal, a sprocket is connected in between both thin but resistant wheels for a seamless chain driven drive. The back 4 dead wheels (2 each side sandwich) are independent from each other despite being on the same shaft due to specially placed bearings, making it incredibly smooth to turn even with 2 powered wheels out of 4. The system is powered by two, 117rpm GoBilda motors for a balance of speed and torque. As a whole the drive has a very small footprint to give the robot an elite advantage when playing on the Engines.
+      </p>
+    </div>
+  </section>
 </body>
 </html>
