re-added toggle scanlines

--- a/home.html
+++ b/home.html
@@ -108,6 +108,9 @@ function toggleFullscreen() {
     }
   }
 }
+function toggleScanlines(){
+  document.body.classList.toggle("scanlines");
+}
 </script>
 </body>
 </html>
