Charlie mo good link

--- a/sidebars/entire.html
+++ b/sidebars/entire.html
@@ -75,7 +75,7 @@
 
 <button onclick="loadContent('members/sofia.html','content-main')"class="glitch" data-text="Sofia Mazareanu">Sofia Mazareanu</button>
 
-<button onclick="loadContent('members/charlie.html','content-main')"class="glitch" data-text="Charlie Mo">Charlie Mo</button>
+<button onclick="loadContent('members/charliemo.html','content-main')"class="glitch" data-text="Charlie Mo">Charlie Mo</button>
 
 <button onclick="loadContent('members/eunice.html','content-main')"class="glitch" data-text="Eunice Liang">Eunice Liang</button>
 
