--- a/rules.html
+++ b/rules.html
@@ -26,9 +26,10 @@
 <h2 data-i18n="3dmap" style="text-align: center">3D Map of The Field:</h2>
 <section class="field-visualizer">
     <model-viewer 
-        src="./field.glb"
+        src="field.glb"
         alt="3D field model"
         camera-controls
+        max-camera-orbit="auto 75deg auto"
         auto-rotate
         shadow-intensity="1"
         exposure="1.1"
