--- a/timeline.html
+++ b/timeline.html
@@ -225,7 +225,7 @@
         <div class="dashboard">
             <div id="info-panel">
                 <h1 class="monarch-title" id="ui-name">Name</h1>
-                <div class="monarch-meta" id="ui-meta">Date | House</div>
+                <div class="monarch-meta" id="ui-meta">Date</div>
                 <div class="monarch-desc" id="ui-desc">Description</div>
             </div>
         </div>
@@ -266,32 +266,42 @@
         // 2. DATA 
         // =============================================================================
         const TIMELINE_DATA = [
-            { name: "CRC Competition", date: "FIN", house: "SPECIAL", desc: "Project Completed. End of line.", isCenter: true },
-            { name: "Henry VII", date: "1485–1509", house: "Tudor", desc: "Ended the Wars of the Roses. Founded the Tudor dynasty." },
-            { name: "Henry VIII", date: "1509–1547", house: "Tudor", desc: "Known for his six marriages and initiating the English Reformation." },
-            { name: "Edward VI", date: "1547–1553", house: "Tudor", desc: "England's first monarch to be raised as a Protestant." },
-            { name: "Lady Jane", date: "1553", house: "Tudor", desc: "The 'Nine Days Queen', deposed and executed." },
-            { name: "Mary I", date: "1553–1558", house: "Tudor", desc: "Attempted to reverse the Reformation. 'Bloody Mary'." },
-            { name: "Elizabeth I", date: "1558–1603", house: "Tudor", desc: "The Virgin Queen. Defeated the Spanish Armada." },
-            { name: "James I", date: "1603–1625", house: "Stuart", desc: "Union of the Crowns of Scotland and England." },
-            { name: "Charles I", date: "1625–1649", house: "Stuart", desc: "Executed for treason after the Civil War." },
-            { name: "Interregnum", date: "1649–1660", house: "Republic", desc: "Rule by Oliver Cromwell as Lord Protector." },
-            { name: "Charles II", date: "1660–1685", house: "Stuart", desc: "Restored the monarchy. The 'Merry Monarch'." },
-            { name: "James II", date: "1685–1688", house: "Stuart", desc: "Deposed in the Glorious Revolution." },
-            { name: "William & Mary", date: "1689–1702", house: "Orange", desc: "Ruled jointly. Signed the Bill of Rights." },
-            { name: "Anne", date: "1702–1714", house: "Stuart", desc: "The Acts of Union created Great Britain." },
-            { name: "George I", date: "1714–1727", house: "Hanover", desc: "German-speaking King who relied on ministers." },
-            { name: "George II", date: "1727–1760", house: "Hanover", desc: "The last British monarch to lead an army in battle." },
-            { name: "George III", date: "1760–1820", house: "Hanover", desc: "Reigned during American Revolution and Napoleonic Wars." },
-            { name: "George IV", date: "1820–1830", house: "Hanover", desc: "Extravagant patron of the arts." },
-            { name: "William IV", date: "1830–1837", house: "Hanover", desc: "The Sailor King. Passed Reform Act 1832." },
-            { name: "Victoria", date: "1837–1901", house: "Hanover", desc: "Empress of India. Defined an entire century." },
-            { name: "Edward VII", date: "1901–1910", house: "Saxe-Coburg", desc: "Pioneered the Entente Cordiale." },
-            { name: "George V", date: "1910–1936", house: "Windsor", desc: "Led Britain through WWI." },
-            { name: "Edward VIII", date: "1936", house: "Windsor", desc: "Abdicated to marry Wallis Simpson." },
-            { name: "George VI", date: "1936–1952", house: "Windsor", desc: "Symbol of courage during WWII." },
-            { name: "Elizabeth II", date: "1952–2022", house: "Windsor", desc: "The longest-reigning British monarch." },
-            { name: "Charles III", date: "2022–Present", house: "Windsor", desc: "The current King." }
+            { name: "CRC Competition", date: "FIN", desc: "Project Completed. End of line.", isCenter: true },
+            { name: "George IV", date: "JANUARY", desc: `-Finishing the last scenes 
+-Editing and finishing the entire video 
+` },
+            { name: "William IV", date: "NOVEMBER-DECEMBER", desc: `-Action scenes being filmed; more time-consuming
+-Staying after school more often to film
+-Editing scenes as we go, looking into editing ideas, special effects, etc. 
+` },
+            { name: "Victoria", date: "OCTOBER-NOVEMBER", desc: `-Script completed 
+-Start brainstorming where each scene will be filmed and how it will be filmed
+-Finalizing who will be acting in the video and who they will be
+-Buying costumes for the actors 
+-Beginning the filming process
+` },
+            { name: "Starting", date: "SEPTEMBER", desc: `-Brainstorming
+-Writing the script
+-Actor recruitment
+` },
+            { name: "Video Team", date: "BEGINNING", desc: "This marks the beginning of the Video Team's progress", isCenter: true },
+            { name: "Finalization", date: "JANUARY-FEBRUARY", desc: `-Finalizing walls and car
+-Tables being built 
+-Finalizing pinball machine code, 3D printed objects for kiosk, etc. 
+-Physically laying out the kiosk on the stage to see how it looks 
+` },
+            { name: "Action", date: "NOVEMBER-DECEMBER", desc: `-Worked on the car
+-Walls being sketched and painted 
+` },
+            { name: "Preparation", date: "OCTOBER-NOVEMBER", desc: `-Preparing walls. Wanted to redo the walls entirely in comparison to last year 
+-Started designing and building the car: car frame
+` },
+            { name: "Brainstorming", date: "FEBRUARY-MAY AND SEPTEMBER", desc: `-Discussed organizing kiosk layout; walls and wow factors. and ways to make construction achievable while also keeping a good visual factor
+-Construction of pinball machine 
+-Training session for juniors 
+-Deciding on construction of batmobile 
+-Ordering supplies` },
+            { name: "Kiosk Team", date: "BEGINNING", desc: "This marks the beginning of the Kiosk team's progress", isCenter: true }
         ];
 
         // =============================================================================
@@ -529,7 +539,7 @@
             
             setTimeout(() => {
                 uiName.innerText = d.name;
-                uiMeta.innerText = `${d.date} | ${d.house}`;
+                uiMeta.innerText = `${d.date}`;
                 uiDesc.innerText = d.desc;
                 uiPanel.classList.add('active');
             }, 100);
@@ -562,7 +572,7 @@
             let closestIdx = -1;
 
             cards.forEach((c, i) => {
-                const dist = Math.abs(state.scrollPos - c.angle);
+                const dist = Math.abs(state.scrollPos - c.angle - 0.2);
                 
                 if (dist > 2.5) {
                     c.pivot.visible = false;
