--- a/timeline.html
+++ b/timeline.html
@@ -267,14 +267,14 @@
         // =============================================================================
         const TIMELINE_DATA = [
             { name: "CRC Competition", date: "FIN", desc: "Project Completed. End of line.", isCenter: true },
-            { name: "George IV", date: "JANUARY", desc: `-Finishing the last scenes 
+            { name: "test", date: "JANUARY", desc: `-Finishing the last scenes 
 -Editing and finishing the entire video 
 ` },
-            { name: "William IV", date: "NOVEMBER-DECEMBER", desc: `-Action scenes being filmed; more time-consuming
+            { name: "test", date: "NOVEMBER-DECEMBER", desc: `-Action scenes being filmed; more time-consuming
 -Staying after school more often to film
 -Editing scenes as we go, looking into editing ideas, special effects, etc. 
 ` },
-            { name: "Victoria", date: "OCTOBER-NOVEMBER", desc: `-Script completed 
+            { name: "test", date: "OCTOBER-NOVEMBER", desc: `-Script completed 
 -Start brainstorming where each scene will be filmed and how it will be filmed
 -Finalizing who will be acting in the video and who they will be
 -Buying costumes for the actors 
@@ -608,3 +608,4 @@
     </script>
 </body>
 </html>
+
