--- a/main_teams/robot.html
+++ b/main_teams/robot.html
@@ -1,4 +1,7 @@
 <link rel="stylesheet" href="book.css">
+<div style="text-align: center"> 
+    <button class="back_button" data-i18n="back_button" onclick="loadContent('team_intro.html','content-main'); loadContent('sidebars/home_sidebar.html','sidebar')"></button>
+</div>
 <article class="comic">
   <div onclick="loadContent('members/adih.html','content-main')"class="panel">
     
