--- a/main_teams/video.html
+++ b/main_teams/video.html
@@ -1,4 +1,7 @@
 <link rel="stylesheet" href="book.css">
+<div style="text-align: center"> 
+    <button class="back_button" data-i18n="back_button" onclick="loadContent('team_intro.html','content-main'); loadContent('sidebars/home_sidebar.html','sidebar')"></button>
+</div>
 <article class="comic">
 <div onclick="loadContent('members/nicolas.html','content-main')"class="panel">
     <img src="comics/joker.png" alt="">
@@ -11,7 +14,14 @@
     <p class="text bottom-right">Konigsberg</p>
 
 </div>
-
+<div onclick="loadContent('members/alana.html','content-main')"class="panel">
+    <img src="comics/catwoman.png" alt="">
+    <p class="text bottom-right">Alana Mangione</p>
+</div>
+<div onclick="loadContent('members/mia.html','content-main')"class="panel">
+    <img src="comics/poisonivy.png" alt="">
+    <p class="text top-left">Mia Tutty</p>
+</div>
 <div onclick="loadContent('members/jonah.html','content-main')"class="panel">
     <img src="comics/alfred.png" alt="">
     <p class="text bottom-right">Jonah Gurevitch</p>
@@ -21,14 +31,21 @@
     <img src="comics/harleyquinn.png" alt="">
     <p class="text top-left">Zoe Chandler</p>
 </div>
-
-<div onclick="loadContent('members/mia.html','content-main')"class="panel">
-    <img src="comics/poisonivy.png" alt="">
-    <p class="text top-left">Mia Tutty</p>
+<div onclick="loadContent('members/eunice.html','content-main')"class="panel">
+    <img src="comics/ladyshiva.png" alt="">
+    <p class="text bottom-right">Eunice Liang</p>
 </div>
+
 
 <div onclick="loadContent('members/brody.html','content-main')"class="panel">
     <img src="comics/killercroc.png" alt="">
     <p class="text bottom-right">Brody Lemcovitch</p>
 </div>
+
+
+<div onclick="loadContent('members/sofia.html','content-main')"class="panel">
+    <img src="comics/huntress.png" alt="">
+    <p class="text bottom-right">Sofia Mazareanu</p>
+</div>
+
 </article>
