Add team member panels to website.html

--- a/main_teams/website.html
+++ b/main_teams/website.html
@@ -1,4 +1,7 @@
 <link rel="stylesheet" href="book.css">
+<div style="text-align: center"> 
+    <button class="back_button" data-i18n="back_button" onclick="loadContent('team_intro.html','content-main'); loadContent('sidebars/home_sidebar.html','sidebar')"></button>
+</div>
 <article class="comic">
 
 <div onclick="loadContent('members/gab.html','content-main')"class="panel">
@@ -6,4 +9,17 @@
     <p class="text bottom-right">Ramos Rodriguez</p>
     <img src="comics/bat-hombre.png" alt="">
 </div>
+<div onclick="loadContent('members/tommi.html','content-main')"class="panel">
+    <img src="comics/rasalghul.png" alt="">
+    <p class="text top-left">Tommi Sabra</p>
+</div>
+<div onclick="loadContent('members/alana.html','content-main')"class="panel">
+    <img src="comics/catwoman.png" alt="">
+    <p class="text bottom-right">Alana Mangione</p>
+</div>
+
+<div onclick="loadContent('members/adih.html','content-main')"class="panel">
+    <p class="text top-left">Adih Verma</p>  
+    <img src="comics/jacknapier.png" alt="">
+  </div>
 </article>
