Add button for Vasili Vitoroulis to programming team

--- a/sidebars/programming_team.html
+++ b/sidebars/programming_team.html
@@ -12,3 +12,5 @@
 <button class="glitch" data-text="Christian Siracusa" onclick="loadContent('members/christian.html','content-main')">Christian Siracusa</button>
 
 <button class="glitch" data-text="George Konstantopoulos" onclick="loadContent('members/george.html','content-main')">George Konstantopoulos</button>
+
+<button class="glitch" data-text="Vasili Vitoroulis" onclick="loadContent('members/vasili.html','content-main')">Vasili Vitoroulis</button>
