Fix link for Charlie Mo's member page

--- a/sidebars/kiosk_team.html
+++ b/sidebars/kiosk_team.html
@@ -53,6 +53,6 @@
 
 <button class="glitch" data-text="Zachary Vamvadakis" onclick="loadContent('members/zachvam.html','content-main')">Zachary Vamvadakis</button>
 
-<button onclick="loadContent('members/charlie.html','content-main')"class="glitch" data-text="Charlie Mo">Charlie Mo</button>
+<button onclick="loadContent('members/charliemo.html','content-main')"class="glitch" data-text="Charlie Mo">Charlie Mo</button>
 
 
