Modify back button and remove Tommi Sabra button
Updated the back button to load a different content page and removed the button for Tommi Sabra.

--- a/sidebars/entire.html
+++ b/sidebars/entire.html
@@ -1,7 +1,7 @@
 <nav class="menu-header">
     <h2>Entire Team</h2>
     <!-- Language switch button -->
-    <button class="lang-btn" style="width:8vw" title="Back" data-i18n="back_button" onclick="loadContent('team_intro.html','content-main'); loadContent('sidebars/home_sidebar.html','sidebar')"></button>                 
+    <button class="lang-btn" style="width:8vw" title="Back" data-i18n="back_button" onclick="loadContent('main_teams/entire.html','content-main')"></button>                 
     <button style="width:auto" onclick="switchLanguage()"id="lang-switch" class="lang-btn" title="Switch Language" data-i18n="switch_lang"></button>
     
 </nav>
@@ -66,9 +66,6 @@
 
 <button onclick="loadContent('members/david.html','content-main')"class="glitch" data-text="David Zien Liang">David Zien Liang</button>
 
-
-
-
 <button onclick="loadContent('members/alana.html','content-main')"class="glitch" data-text="Alana Mangione">Alana Mangione</button>
 
 <button onclick="loadContent('members/kamryn.html','content-main')"class="glitch" data-text="Kamryn Hum">Kamryn Hum</button>
@@ -78,6 +75,3 @@
 <button onclick="loadContent('members/charliemo.html','content-main')"class="glitch" data-text="Charlie Mo">Charlie Mo</button>
 
 <button onclick="loadContent('members/eunice.html','content-main')"class="glitch" data-text="Eunice Liang">Eunice Liang</button>
-
-<button onclick="loadContent('members/tommi.html','content-main')"class="glitch" data-text="Tommi Sabra">Tommi Sabra</button>
-
