Add new member buttons and remove duplicates

--- a/sidebars/entire.html
+++ b/sidebars/entire.html
@@ -15,6 +15,8 @@
 <button class="avatar wrapper" onclick="loadContent('members/bella.html','content-main')" class="glitch" data-text="Bella Gregory">Bella Gregory</button>
 
 <button onclick="loadContent('members/charlie.html','content-main') " class="glitch" data-text="Charlie Konigsberg">Charlie Konigsberg</button>
+<button onclick="loadContent('members/alana.html','content-main')"class="glitch" data-text="Alana Mangione">Alana Mangione</button>
+
 
 <button onclick="loadContent('members/nicolas.html','content-main')" class="glitch" data-text="Nicolas Azar">Nicolas Azar</button>
 
@@ -25,18 +27,23 @@
 <button class="glitch" data-text="Melissa Falbo" onclick="loadContent('members/melissa.html','content-main')">Melissa Falbo</button>
 
 <button class="glitch" data-text="Mia Tutty" onclick="loadContent('members/mia.html','content-main')">Mia Tutty</button>
+<button onclick="loadContent('members/kamryn.html','content-main')"class="glitch" data-text="Kamryn Hum">Kamryn Hum</button>
 
+<button onclick="loadContent('members/sofia.html','content-main')"class="glitch" data-text="Sofia Mazareanu">Sofia Mazareanu</button>
 <button class="glitch" data-text="Chase Engel" onclick="loadContent('members/chase.html','content-main')">Chase Engel</button>
 
 <button class="glitch" data-text="Brody Lemcovitch" onclick="loadContent('members/brody.html','content-main')">Brody Lemcovitch</button>
 
 <button class="glitch" data-text="Jonah Gurevitch" onclick="loadContent('members/jonah.html','content-main')">Jonah Gurevitch</button>
-
+<button onclick="loadContent('members/eunice.html','content-main')"class="glitch" data-text="Eunice Liang">Eunice Liang</button>
 <button class="glitch" data-text="Zoe Chandler" onclick="loadContent('members/zoe.html','content-main')">Zoe Chandler</button>
 
 <button class="glitch" data-text="Christian Siracusa" onclick="loadContent('members/christian.html','content-main')">Christian Siracusa</button>
 
 <button class="glitch" data-text="George Konstantopoulos" onclick="loadContent('members/george.html','content-main')">George Konstantopoulos</button>
+
+    
+<button class="glitch" data-text="Vasili Vitoroulis" onclick="loadContent('members/vasili.html','content-main')">Vasili Vitoroulis</button>
 
 <button class="glitch" data-text="Marcus De Rosa" onclick="loadContent('members/marcus.html','content-main')">Marcus De Rosa</button>
 
@@ -66,12 +73,9 @@
 
 <button onclick="loadContent('members/david.html','content-main')"class="glitch" data-text="David Zien Liang">David Zien Liang</button>
 
-<button onclick="loadContent('members/alana.html','content-main')"class="glitch" data-text="Alana Mangione">Alana Mangione</button>
 
-<button onclick="loadContent('members/kamryn.html','content-main')"class="glitch" data-text="Kamryn Hum">Kamryn Hum</button>
-
-<button onclick="loadContent('members/sofia.html','content-main')"class="glitch" data-text="Sofia Mazareanu">Sofia Mazareanu</button>
 
 <button onclick="loadContent('members/charliemo.html','content-main')"class="glitch" data-text="Charlie Mo">Charlie Mo</button>
 
-<button onclick="loadContent('members/eunice.html','content-main')"class="glitch" data-text="Eunice Liang">Eunice Liang</button>
+
+
