Remove duplicate 'The Entire Team' button
Removed duplicate button for 'The Entire Team'.

--- a/team_intro.html
+++ b/team_intro.html
@@ -1,4 +1,11 @@
+<div style="text-align:center">
+    <button class="folder wrapper" onclick="loadContent('sidebars/entire.html','sidebar'); loadContent('main_teams/entire.html','content-main')">
+        <img src="folder_icon.png" alt="">
+        <span data-i18n="entire" class="folder_text glitch" data-text="The Entire Team">The Entire Team</span>
+    </button>
+    </div>
 <div class="grid_container">
+    
     <button class="folder wrapper" onclick="loadContent('sidebars/robot_team.html','sidebar'); loadContent('main_teams/robot.html','content-main')">
         <img src="folder_icon.png" alt="">
         <span data-i18n="robot" class="folder_text glitch" data-text="Robot">Robot</span>
@@ -24,12 +31,9 @@
         <span data-i18n="website" class="folder_text glitch" data-text="Website">Website</span>
     </button>
 
-    <button class="folder wrapper">
+    <button class="folder wrapper" onclick="loadContent('sidebars/mentor.html','sidebar'); loadContent('main_teams/mentor.html','content-main')">
         <img src="folder_icon.png" alt="">
         <span data-i18n="mentors" class="folder_text glitch" data-text="Mentors">Mentors</span>
     </button>
-    <button class="folder wrapper" onclick="loadContent('sidebars/entire.html','sidebar'); loadContent('main_teams/entire.html','content-main')">
-        <img src="folder_icon.png" alt="">
-        <span data-i18n="entire" class="folder_text glitch" data-text="The Entire Team">The Entire Team</span>
-    </button>
+    
 </div>
