Add welcome messages to opening.html
Added new content with headings and a paragraph to the opening.html file.

--- a/opening.html
+++ b/opening.html
@@ -1,56 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        @font-face {
-            font-family: 'BatmanForever';
-            src: url('batman_forever/batmfa__.ttf') format('truetype');
-            font-weight: normal;
-            font-style: normal;
-        }
-
-        body {
-                    background-color: #0D0D0D;
-                    font-family: 'BatmanForever', sans-serif;
-                    background-repeat: no-repeat;
-                    background-position: center;
-                    background-size: cover;
-                    height: 100vh;
-                    width: 100vw;
-                    position: relative;
-                    overflow: hidden;
-                    margin: 0;
-                }
-        h3 {
-            flex: 1;
-            display: flex;
-            align-items: center;    
-            justify-content: center;
-            padding: 6vh 5vw;
-            text-decoration: none;
-            font-size: 5vw;
-            color: cyan;
-            border-bottom: 1px solid cyan;
-        }
-        p {
-            flex: 1;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: cyan;
-            font-size: 1.5vw;
-        }
-    </style>
-</head>
-<body class="crt glitch" id="page">
-    <h3>Welcome Bruce Wayne</h3>
-    <p>Click on any of the items on the sidebar to begin</p>
-    <p>FYI: you can scroll the sidebar</p>
-    
-</body>
-<script src="glitch.js"></script>
-
-</html>
+<div style="text-align:center">
+<h1 data-i18n="welcome">erwefwew</h1>
+<h3 data-i18n="welcome2">rewwerrwewer</h3>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+<p>FYI: you can scroll the sidebar</p>
+</div>
