Update welcome headers and FYI paragraph
Removed content from welcome headers and replaced with empty tags. Updated the FYI paragraph to use a data-i18n attribute.

--- a/opening.html
+++ b/opening.html
@@ -1,6 +1,6 @@
 <div style="text-align:center">
-<h1 data-i18n="welcome">erwefwew</h1>
-<h3 data-i18n="welcome2">rewwerrwewer</h3>
+<h1 data-i18n="welcome"></h1>
+<h3 data-i18n="welcome2"></h3>
     <br>
     <br>
     <br>
@@ -12,5 +12,5 @@
     <br>
     <br>
     <br>
-<p>FYI: you can scroll the sidebar</p>
+<p data-i18n="welcome3"></p>
 </div>
