--- a/crc.html
+++ b/crc.html
@@ -4,6 +4,11 @@
 <h2 data-i18n="beyond_competition"></h2>
 <p data-i18n="beyond_competitiontext"></p>
 <p data-i18n="crc_more"></p>
+
 <a href="https://robo-crc.ca/" target="_blank" rel="noopener noreferrer" style="display: block; text-align: center;">
   <img src="crc.png" alt="CRC logo" style="display: inline-block; width: clamp(120px, 20vw, 220px); height: auto;">
 </a>
+
+<div style="width: 100%; display: flex; justify-content: center; overflow: hidden; margin-top: 100px;">
+  <img src="crcribbon.png" alt="CRC Ribbon" style="display: block; height: auto; max-width: 100%;">
+</div>
