--- a/conception.html
+++ b/conception.html
@@ -107,9 +107,7 @@ h3 { color: rgb(28,163,186); }
 <div class="rule">
 <h3 data-i18n="conception_title2">Electronics</h3>
 <p data-i18n="conception2">
-All electronics are securely mounted onto the top frame of the robot and spaced
-out for easy access. The battery sits toward the front to counter weight from
-the conveyor motors and help balance the shortened wheelbase.
+Electronics Description
 </p>
 </div>
 </td>
@@ -128,10 +126,7 @@ the conveyor motors and help balance the shortened wheelbase.
 <div class="rule">
 <h3 data-i18n="conception_title4">Drive System</h3>
 <p data-i18n="conception4">
-RWD drive with eight wheels total. Front wheels are chained together with
-sprockets and bearings for smooth power transfer. Rear wheels are dead but
-independent, making turning noticeably smoother. Powered by two 117rpm
-GoBilda motors for a balance of speed and torque.
+Drive System Description
 </p>
 </div>
 </td>
