Update back button language data attribute

--- a/sidebars/entire.html
+++ b/sidebars/entire.html
@@ -1,7 +1,7 @@
 <nav class="menu-header">
     <h2>Entire Team</h2>
     <!-- Language switch button -->
-    <button class="lang-btn" style="width:8vw" title="Back" data-i18n="back_button" onclick="loadContent('main_teams/entire.html','content-main')"></button>                 
+    <button class="lang-btn" style="width:8vw" title="Back" data-i18n="back1" onclick="loadContent('main_teams/entire.html','content-main')"></button>                 
     <button style="width:auto" onclick="switchLanguage()"id="lang-switch" class="lang-btn" title="Switch Language" data-i18n="switch_lang"></button>
     
 </nav>
