Update button title attribute for back button

--- a/sidebars/programming_team.html
+++ b/sidebars/programming_team.html
@@ -1,7 +1,7 @@
 <nav class="menu-header">
     <h2>Coding Team</h2>
     <!-- Language switch button -->
-    <button style="width:8vw" class="lang-btn" title="Back" data-i18n="back_button" onclick="loadContent('team_intro.html','content-main'); loadContent('sidebars/home_sidebar.html','sidebar')"></button>     
+    <button style="width:8vw" class="lang-btn" title="Back" data-i18n="back1" onclick="loadContent('team_intro.html','content-main'); loadContent('sidebars/home_sidebar.html','sidebar')"></button>     
     <button style="width:auto" onclick="switchLanguage()"id="lang-switch" class="lang-btn" title="Switch Language" data-i18n="switch_lang"></button>          
 </nav>
 
