Update back button text for localization

--- a/main_teams/mentor.html
+++ b/main_teams/mentor.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="book.css">
 <div style="text-align: center"> 
-    <button class="back_button" data-i18n="back_button" onclick="loadContent('team_intro.html','content-main'); loadContent('sidebars/home_sidebar.html','sidebar')"></button>
+    <button class="back_button" data-i18n="back2" onclick="loadContent('team_intro.html','content-main'); loadContent('sidebars/home_sidebar.html','sidebar')"></button>
 </div>
 <article class="comic">
 <div onclick="loadContent('members/hilli.html','content-main')"class="panel">
