--- a/sidebars/home_sidebar.html
+++ b/sidebars/home_sidebar.html
@@ -13,3 +13,4 @@
 <button onclick="loadContent('rules.html','content-main')" data-i18n="rules" class="glitch" data-text="Rules"></button>
 <button onclick="loadContent('settings.html','content-main')" data-i18n="settings" class="glitch" data-text="Settings"></button>
 <button onclick="loadContent('credits.html','content-main')" data-i18n="credits" class="glitch" data-text="Credits"></button>
+<button onclick="loadContent('ai.html','content-main')" data-i18n="ai1" class="glitch" data-text="AI Usage"></button>
