--- a/ai.html
+++ b/ai.html
@@ -1,3 +1,4 @@
+<div style="text-align:center">
 <h1 data-i18n="ai1"></h1>
 <h3 data-i18n="ai2"></h3>
 <p data-i18n="ai3"></p>
@@ -5,4 +6,5 @@
 <p data-i18n="ai5"></p>
 <h3 data-i18n="ai6"></h3>
 <p data-i18n="ai7"></p>
+  </div>
 
